--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,8 @@
 #container {
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 800px;
+    margin: 0 auto;
+    margin-top: 57px;
 }
+
